Fix spot show head align

--- a/app/assets/stylesheets/api/spot_show.scss
+++ b/app/assets/stylesheets/api/spot_show.scss
@@ -51,7 +51,7 @@
       align-items: flex-start;
       padding-top: 30px;
       width: 46%;
-      height: 150px;
+      height: 190px;
       color: #424242;
 
       .spot-show-info-container {
